--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="NEWS LINKS" />
+    <meta property="og:image" content="src/assets/ogpimage.png" />
   </head>
   <body>
     <div id="app"></div>
