--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta property="og:title" content="NEWS LINKS" />
     <meta property="og:image" content="src/assets/ogpimage.png" />
+    <meta
+      property="og:description"
+      content="https://kdingn.github.io/news-page/"
+    />
+    <meta
+      property="og:description"
+      content="Save your time by simple news links here"
+    />
   </head>
   <body>
     <div id="app"></div>
