correct index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta property="og:title" content="NEWS LINKS" />
-    <meta property="og:image" content="src/assets/ogpimage.png" />
-    <meta
-      property="og:description"
-      content="https://kdingn.github.io/news-page/"
-    />
     <meta
       property="og:description"
       content="Save your time by simple news links here"
     />
+    <meta property="og:url" content="https://kdingn.github.io/news-page/" />
   </head>
   <body>
     <div id="app"></div>
