--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:url" content="https://kdingn.github.io/news-page/" />
     <meta property="og:title" content="NEWS LINKS" />
     <meta
       property="og:description"
-      content="Save your time by simple news links here"
+      content="Simple news links for save your time"
     />
-    <meta property="og:url" content="https://kdingn.github.io/news-page/" />
+    <meta name="description" content="Simple news links for save your time" />
   </head>
   <body>
     <div id="app"></div>
