meta data correct

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta property="og:url" content="https://kdingn.github.io/news-page/" />
     <meta property="og:title" content="NEWS LINKS" />
     <meta
-      property="og:description"
-      content="Simple news links for save your time"
+      property="og:image"
+      content="https://raw.githubusercontent.com/kdingn/news-page/main/src/assets/ogpimage.png"
     />
-    <meta name="description" content="Simple news links for save your time" />
+    <meta
+      property="og:description"
+      content="AI news links based on research papers"
+    />
+    <meta name="description" content="AI news links based on research papers" />
   </head>
   <body>
     <div id="app"></div>
