--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta property="og:url" content="https://kdingn.github.io/news-page/" />
-    <meta property="og:title" content="NEWS LINKS" />
+    <meta property="og:title" content="AI NEWS LINKS" />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/kdingn/news-page/main/src/assets/ogpimage.png"
