--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta property="og:url" content="https://kdingn.github.io/news-page/" />
-    <meta property="og:title" content="AI NEWS LINKS" />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/kdingn/news-page/main/src/assets/ogpimage.png"
@@ -13,6 +12,8 @@
       content="AI news links based on research papers"
     />
     <meta name="description" content="AI news links based on research papers" />
+    <meta property="og:title" content="AI NEWS LINKS" />
+    <title>AI NEWS LINKS</title>
   </head>
   <body>
     <div id="app"></div>
