--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta property="og:url" content="https://kdingn.github.io/news-page/" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/kdingn/news-page/main/src/assets/favicon.ico"
+    />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/kdingn/news-page/main/src/assets/ogpimage.png"
